Fixes, fixes and fixes again...